[gd_scene load_steps=2 format=3 uid="uid://b7v3im3b40tav"]

[ext_resource type="Script" path="res://debug_overlay.gd" id="1_ujbl4"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ujbl4")

[node name="debugLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 17.0
offset_right = 45.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.603922, 0, 0, 1)
theme_override_font_sizes/font_size = 6

[node name="fpsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 7.0
offset_top = 8.0
offset_right = 16.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(0.682353, 0, 0, 1)
theme_override_font_sizes/font_size = 6

[node name="memoryLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.85098, 0, 0, 1)
theme_override_font_sizes/font_size = 6
